// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-action-blocks> Component Basic usage 1`] = `
<bolt-action-blocks>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Border in between each block: false 1`] = `
<bolt-action-blocks>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Border in between each block: true 1`] = `
<bolt-action-blocks borderless>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6 c-bolt-action-blocks--borderless">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Deprecated props still render as expected 1`] = `
<bolt-action-blocks max-items-per-row="2"
                    valign="center"
                    borderless
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-center c-bolt-action-blocks--item-max-2 c-bolt-action-blocks--borderless">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 height="24"
                 viewbox="0 0 24 24"
                 width="24"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path d="m0 0h24v24h-24z">
                </path>
                <g fill="var(--bolt-color-, var(--m-bolt-text))"
                   transform="translate(4 3)"
                >
                  <path d="m15.0225.0488h-14.047c-.536 0-.975.439-.975.976 0 .536.439.975.975.975h14.047c.537 0 .976-.439.976-.975 0-.537-.439-.976-.976-.976"
                        transform="translate(0 16.5)"
                  >
                  </path>
                  <path d="m7.4083 14.73c.141.17.361.27.59.27.23 0 .451-.101.591-.27l5.249-6.283c.178-.21.211-.493.085-.733s-.389-.393-.675-.393h-2.527v-7.321h-5.333v7.321h-2.639c-.286 0-.549.153-.675.393-.052.096-.075.201-.075.306 0 .152.052.305.159.427z">
                  </path>
                </g>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 height="24"
                 viewbox="0 0 24 24"
                 width="24"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path d="m0 0h24v24h-24z">
                </path>
                <g fill="var(--bolt-color-, var(--m-bolt-text))">
                  <path d="m19 20c0 .55-.45 1-1 1h-12c-.55 0-1-.45-1-1v-14c0-.55.45-1 1-1h1c0 1.1.9 2 2 2h6c1.1 0 2-.9 2-2h1c.55 0 1 .45 1 1zm-10-17h6v2h-6v-.963-.038-.038-.963zm9 0h-1c0-1.1-.9-2-2-2h-6c-1.1 0-2 .9-2 2h-1c-1.656 0-3 1.344-3 3v14c0 1.656 1.344 3 3 3h12c1.656 0 3-1.344 3-3v-14c0-1.656-1.344-3-3-3z">
                  </path>
                  <path d="m13 13v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1z">
                  </path>
                </g>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 height="24"
                 viewbox="0 0 24 24"
                 width="24"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path d="m0 0h24v24h-24z">
                </path>
                <g fill="var(--bolt-color-, var(--m-bolt-text))"
                   transform="translate(2 1)"
                >
                  <path d="m2 19.1253h16v-11h-16zm16-17.5h-.938v-1.625h-2v1.625h-10.125v-1.625h-2v1.625h-.937c-1.105 0-2 .895-2 2v15.5c0 1.104.895 2 2 2h16c1.104 0 2-.896 2-2v-15.5c0-1.105-.896-2-2-2z">
                  </path>
                  <path d="m4.292 12.1253h11.416v-2h-11.416z">
                  </path>
                  <path d="m4.292 16.4583h9v-2h-9z">
                  </path>
                </g>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Subcomponent renders as expected 1`] = `
<bolt-action-block>
  <a class="c-bolt-action-block c-bolt-action-block--link"
     href="#!"
  >
    <div class="c-bolt-action-block__item">
      <bolt-icon name="download"
                 size="large"
                 aria-hidden="true"
      >
        <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
          <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
          >
            <g fill="none"
               fill-rule="evenodd"
            >
              <path>
              </path>
              <path fill="var(--bolt-theme-icon, currentColor)"
                    d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                    mask="url(#mask-2)"
                    transform="translate(4 19.5)"
              >
              </path>
              <path fill="var(--bolt-theme-icon, currentColor)"
                    d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
              >
              </path>
            </g>
          </svg>
        </span>
      </bolt-icon>
    </div>
    <div class="c-bolt-action-block__item c-bolt-action-block__text">
      Item 1
    </div>
  </a>
</bolt-action-block>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: center 1`] = `
<bolt-action-blocks valign="center">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-center c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: end 1`] = `
<bolt-action-blocks valign="end">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-end c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: medium 1`] = `
<bolt-action-blocks spacing="medium">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: small 1`] = `
<bolt-action-blocks spacing="small">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-small c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: start 1`] = `
<bolt-action-blocks valign="start">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: xsmall 1`] = `
<bolt-action-blocks spacing="xsmall">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-xsmall c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;
